--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./assets/images/my-avatar.png"
+              src="./assets/images/my-avatar.jpg"
               alt="Richard hanrick"
               width="80"
               style="border-radius: 20px"
