--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </p>
 
             <p>
-              I am currently working as an Associate Software Developer, where I
+              I am currently working as an Full Stack Web Developer, where I
               contribute to building and maintaining web applications and
               backend systems. My role involves writing clean, efficient code,
               debugging issues, and collaborating with a development team to
@@ -486,7 +486,7 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Associate Software Developer
+                  Full Stack Web Developer
                 </h4>
 
                 <span>2025 — Present</span>
