--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./assets/images/icon-app.svg"
+                    src="./assets/images/icon-app.png"
                     alt="mobile app icon"
                     width="40"
                   />
