--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
     <link
       rel="shortcut icon"
-      href="./assets/images/letter-a.png"
+      href="./assets/images/lettera.png"
       type="image/x-icon"
     />
 
