--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <figure class="avatar-box">
             <img
               src="./assets/images/my-avatar.jpg"
-              alt="Richard hanrick"
+              alt="Arvin  Delos Reyes"
               width="80"
               style="border-radius: 20px"
             />
           </figure>
 
           <div class="info-content">
-            <h1 class="name" title="Richard hanrick">Arvin Delos Reyes</h1>
+            <h1 class="name" title="Arvin Delos Reyes">Arvin Delos Reyes</h1>
 
             <p class="title">Full Stack Web developer</p>
           </div>
