update aurablocks description

--- a/index.html
+++ b/index.html
@@ -501,12 +501,10 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Freelance Web Developer</h4>
 
-                <span>2024 — Present</span>
+                <span>2024 — 2025</span>
 
                 <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
+                  Built and managed interventirapidi.it, a WordPress-based platform for emergency repair services. Developed automated SEO landing pages, integrated Google Ads and WhatsApp APIs, and optimized for high local lead conversion across multiple cities in Italy.
                 </p>
               </li>
               <li class="timeline-item">
