update date of work experience

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                   Full Stack Web Developer
                 </h4>
 
-                <span>2025 — Present</span>
+                <span>Jul '25 — Dec '25</span>
 
                 <p class="timeline-text">
                   Currently working on web applications and backend systems,
@@ -501,7 +501,7 @@
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">Freelance Web Developer</h4>
 
-                <span>2024 — 2025</span>
+                <span>Jan '25 — Jul '25</span>
 
                 <p class="timeline-text">
                   Built and managed interventirapidi.it, a WordPress-based platform for emergency repair services. Developed automated SEO landing pages, integrated Google Ads and WhatsApp APIs, and optimized for high local lead conversion across multiple cities in Italy.
